# fast-api-study

./: Dockerfile  docker-compose.yml  env.example  gunicorn.service  pyproject.toml  requirements.txt  run.app.sh  run.postgres.sh
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 2c56a2e3f335_add_fk_posts_users.py  59d933c9958c_create_users_table.py  5a3c19386396_create_posts_table.py  b7aef0176dd1_auto_votes.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: test_user.py
